# UV_control_box

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
Control/: Control.cpp  Control.h  ControlWindow.cpp
UV/: icontroldata.cpp  icontroldata.h  iserverdata.cpp  iserverdata.h  iuserinterfacedata.cpp  iuserinterfacedata.h  uv_state.cpp  uv_state.h
communication/: main.cpp  pultcontrolsystemprotocols.h  rovdata.h  udp_protocol.h
control/: ControlBase.cpp  ControlBase.h  ControlWindow.cpp  ControlWindow.h  ControlWindow.ui  Gradation.cpp  Gradation.h  Joystick.cpp  Joystick.h  Step.cpp  Step.h
thruster/: Thruster.cpp  Thruster.h  ThrusterWindow.h
